atlas/main/default/objects/Call_Log__c/Call_Log__c.object-meta.xml
<CustomObject>
    <label>Call Log</label>
    <nameField>
        <displayFormat>CALL-{000000}</displayFormat>
        <label>Call Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>