atlas/main/default/objects/Call_Log__c/fields/Bland_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Bland_Call_ID__c</fullName>
    <externalId>true</externalId>
    <label>Bland Call ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>