atlas/main/default/objects/Call_Log__c/fields/Called_At__c.field-meta.xml
<CustomField>
    <fullName>Called_At__c</fullName>
    <label>Called At</label>
    <type>DateTime</type>
</CustomField>