atlas/main/default/objects/Call_Log__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>