atlas/main/default/objects/Call_Log__c/fields/Handoff_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handoff Triggered</label>
    <type>Checkbox</type>
</CustomField>