atlas/main/default/objects/Call_Log__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <label>Load</label>
    <referenceTo>Load__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>