atlas/main/default/objects/Call_Log__c/fields/Rate_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Rate_Quoted__c</fullName>
    <label>Rate Quoted</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>