atlas/main/default/objects/Call_Log__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <label>Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>